tests/invalid/Parsing_Invalid_16.whiley
function f() -> {int x, int y}:
     return {x: 1, x: 2, y: 3}